--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/mcollina/fastify-gql/issues"
   },
-  "homepage": "https://github.com/mcollina/fastify-gql#readme"
+  "homepage": "https://github.com/mcollina/fastify-gql#readme",
+  "devDependencies": {
+    "fastify": "^1.11.2",
+    "snazzy": "^8.0.0",
+    "standard": "^12.0.1",
+    "tap": "^12.0.1"
+  },
+  "dependencies": {
+    "fastify-plugin": "^1.2.0",
+    "graphql": "^14.0.2",
+    "tiny-lru": "^1.6.1"
+  }
 }
