--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/mcollina/fastify-gql#readme",
   "devDependencies": {
+    "autocannon": "^3.0.0",
     "fastify": "^1.11.2",
     "pre-commit": "^1.2.2",
     "snazzy": "^8.0.0",
