--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fastify-plugin": "^1.2.0",
     "fastify-static": "^0.14.0",
     "graphql": "^14.0.2",
+    "graphql-jit": "0.0.6",
     "http-errors": "^1.7.1",
     "tiny-lru": "^1.6.1"
   }
