--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "graphql": "^14.1.1",
     "graphql-jit": "0.1.2",
     "http-errors": "^1.7.2",
+    "single-user-cache": "^0.3.0",
     "tiny-lru": "^6.0.0"
   }
 }
