--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "pre-commit": "^1.2.2",
     "snazzy": "^8.0.0",
     "standard": "^12.0.1",
-    "tap": "^12.5.3"
+    "tap": "^13.0.0"
   },
   "dependencies": {
     "fastify-plugin": "^1.5.0",
     "fastify-static": "^2.3.2",
-    "graphql": "^14.1.1",
-    "graphql-jit": "0.1.3",
+    "graphql": "^14.3.0",
+    "graphql-jit": "^0.2.0",
     "http-errors": "^1.7.2",
     "single-user-cache": "^0.3.0",
     "tiny-lru": "^6.0.0"
