--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fastify": "^2.7.1",
     "graphql-tools": "^4.0.5",
     "pre-commit": "^1.2.2",
+    "proxyquire": "^2.1.3",
     "snazzy": "^8.0.0",
     "standard": "^14.0.0",
     "tap": "^14.6.1",
