--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fastify": "^2.7.1",
     "graphql-tools": "^4.0.5",
     "pre-commit": "^1.2.2",
+    "proxyquire": "^2.1.3",
     "snazzy": "^8.0.0",
     "standard": "^14.0.0",
     "tap": "^14.6.1",
@@ -38,9 +39,12 @@
   "dependencies": {
     "fastify-plugin": "^1.6.0",
     "fastify-static": "^2.5.0",
+    "fastify-websocket": "^0.6.0",
     "graphql": "^14.5.0",
     "graphql-jit": "^0.4.0",
     "http-errors": "^1.7.3",
+    "mqemitter": "^3.0.0",
+    "readable-stream": "^3.4.0",
     "single-user-cache": "^0.3.0",
     "tiny-lru": "^7.0.0"
   }
