--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "unit": "tap --100 -J test/*.js",
-    "unit2": "tap test/subscription-connection.js",
-    "cov": "tap --coverage-report=html -J test/*.js",
+    "unit": "tap --no-esm --no-jsx --100 -J test/*.js",
+    "cov": "tap  --no-esm --no-jsx --coverage-report=html -J test/*.js",
     "lint": "npm run lint:standard && npm run lint:typescript",
     "lint:standard": "standard | snazzy",
     "lint:typescript": "standard --parser @typescript-eslint/parser --plugin @typescript-eslint/eslint-plugin test/types/*.ts",
@@ -25,10 +24,10 @@
   },
   "homepage": "https://github.com/mcollina/fastify-gql#readme",
   "devDependencies": {
-    "@types/node": "^13.1.7",
-    "@typescript-eslint/eslint-plugin": "^2.16.0",
-    "@typescript-eslint/parser": "^2.16.0",
-    "autocannon": "^4.4.2",
+    "@types/node": "^13.5.0",
+    "@typescript-eslint/eslint-plugin": "^2.17.0",
+    "@typescript-eslint/parser": "^2.17.0",
+    "autocannon": "^4.5.1",
     "fastify": "^2.11.0",
     "graphql-tools": "^4.0.5",
     "pre-commit": "^1.2.2",
@@ -47,6 +46,7 @@
     "graphql-jit": "^0.4.0",
     "http-errors": "^1.7.3",
     "mqemitter": "^3.0.0",
+    "readable-stream": "^3.5.0",
     "single-user-cache": "^0.3.0",
     "tiny-lru": "^7.0.0"
   }
