--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ws": "^7.2.1"
   },
   "dependencies": {
+    "end-of-stream": "^1.4.4",
     "fastify-plugin": "^1.6.0",
     "fastify-static": "^2.6.0",
     "fastify-websocket": "^1.0.0",
