--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fastify-gql",
   "version": "3.2.0",
-  "description": "Fastify barebone GraphQL adapter",
+  "description": "Fastify GraphQL adapter",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
