--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -1,5 +1,5 @@
 version: 1
 update_conigs:
-  package_manager: "javascript"
-  directory: "/"
-  update_schedule: "daily"
+  - package_manager: "javascript"
+    directory: "/"
+    update_schedule: "daily"
