--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/mcollina/fastify-gql#readme",
   "devDependencies": {
     "@types/node": "^14.0.1",
+    "@types/ws": "^7.2.1",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
     "autocannon": "^4.5.1",
@@ -39,6 +40,7 @@
     "ws": "^7.2.1"
   },
   "dependencies": {
+    "@apollographql/graphql-playground-html": "^1.6.24",
     "end-of-stream": "^1.4.4",
     "fastify-plugin": "^1.6.0",
     "fastify-static": "^2.6.0",
