--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "npm run lint:standard && npm run lint:typescript",
     "lint:standard": "standard | snazzy",
     "lint:typescript": "standard --parser @typescript-eslint/parser --plugin @typescript-eslint/eslint-plugin test/types/*.ts",
-    "typescript": "tsc --project ./test/types/tsconfig.json",
+    "typescript": "tsd",
     "test": "npm run lint && npm run unit && npm run typescript"
   },
   "repository": {
@@ -28,20 +28,21 @@
     "@typescript-eslint/eslint-plugin": "^3.0.0",
     "@typescript-eslint/parser": "^3.0.0",
     "autocannon": "^5.0.0",
-    "fastify": "^2.12.0",
+    "fastify": "^3.0.0",
     "graphql-tools": "^6.0.8",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
     "snazzy": "^8.0.0",
     "standard": "^14.0.0",
     "tap": "^14.10.6",
-    "typescript": "^3.7.5"
+    "tsd": "^0.11.0",
+    "ws": "^7.2.1"
   },
   "dependencies": {
     "end-of-stream": "^1.4.4",
-    "fastify-plugin": "^1.6.0",
-    "fastify-static": "^2.6.0",
-    "fastify-websocket": "^1.0.0",
+    "fastify-plugin": "^2.0.0",
+    "fastify-static": "^3.0.0",
+    "fastify-websocket": "^2.0.0",
     "graphql": "^15.0.0",
     "graphql-jit": "^0.4.0",
     "http-errors": "^1.7.3",
@@ -49,7 +50,9 @@
     "p-map": "^4.0.0",
     "readable-stream": "^3.5.0",
     "single-user-cache": "^0.3.0",
-    "tiny-lru": "^7.0.2",
-    "ws": "^7.2.1"
+    "tiny-lru": "^7.0.2"
+  },
+  "tsd": {
+    "directory": "test/types"
   }
 }
