--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mcollina/fastify-gql.git"
+    "url": "git+https://github.com/mcollina/fastify-gql.git"  
   },
   "author": "Matteo Collina <hello@matteocollina.com>",
   "license": "MIT",
@@ -35,8 +35,7 @@
     "snazzy": "^8.0.0",
     "standard": "^14.0.0",
     "tap": "^14.10.6",
-    "tsd": "^0.11.0",
-    "ws": "^7.2.1"
+    "tsd": "^0.11.0"
   },
   "dependencies": {
     "end-of-stream": "^1.4.4",
@@ -50,7 +49,8 @@
     "p-map": "^4.0.0",
     "readable-stream": "^3.5.0",
     "single-user-cache": "^0.3.0",
-    "tiny-lru": "^7.0.2"
+    "tiny-lru": "^7.0.2",
+    "ws": "^7.2.1"
   },
   "tsd": {
     "directory": "test/types"
