--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/mcollina/fastify-gql#readme",
   "devDependencies": {
     "@types/node": "^14.0.23",
+    "@types/ws": "^7.2.6",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "autocannon": "^5.0.0",
