Feature :: Refresh / Polling Graphql Schema inside Gateway mode (#206)
* Feature :: Refresh / Polling Graphql Schema inside Gateway mode

* Fix :: Gateway :: Use .replaceSchema(), app.log and clearInterval on app.close

* Tests :: Gateway :: Polling interval feature

* Fix :: Gateway :: Initial subscription tests for pollingInterval

* Fix :: Gateway :: Tests for Subscription on polling schemas

* Fix :: Use once(client, 'data') instead of custom eventEmitter

* Fix :: Gateway :: Use Promise.allSettled for refreshing, remove unused once(), cache schema for avoiding unused replacing

* Fix :: Gateway :: Use typeof instead of undefined, close websocket connections on refresh

* Feature :: Gateway :: Add custom error handler for gateway service errors, `mandatory` parameter for gateway services

* Fix :: Use promise.allsettled library instead of native Promise.allSettled

* Feature :: Gateway :: Use unified syntax of errorHandler

* Feature :: Gateway :: Write proper documentation for automatic / manual schema refreshing

* Fix :: Gateway :: Throw all errors when it exists, replace .then() with variable

* Fix :: Gateway :: README.md according to notes

* Fix :: Gateway :: Add "Downstream error" into README.md

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/mcollina/fastify-gql#readme",
   "devDependencies": {
+    "@sinonjs/fake-timers": "^6.0.1",
     "@types/node": "^14.0.23",
     "@types/ws": "^7.2.6",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
@@ -49,6 +50,7 @@
     "http-errors": "^1.7.3",
     "mqemitter": "^4.0.0",
     "p-map": "^4.0.0",
+    "promise.allsettled": "^1.0.2",
     "readable-stream": "^3.5.0",
     "single-user-cache": "^0.3.0",
     "tiny-lru": "^7.0.2",
