--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
     "snazzy": "^8.0.0",
+    "split2": "^3.1.1",
     "standard": "^14.0.0",
     "tap": "^14.10.6",
     "tsd": "^0.13.1"
