--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -3,3 +3,10 @@ update_configs:
   - package_manager: "javascript"
     directory: "/"
     update_schedule: "daily"
+  - automerged_updates:
+      - match:
+          dependency_type: "development"
+          update_type: "all"
+      - match:
+          dependency_type: "production"
+          update_type: "all"
