--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -3,7 +3,7 @@ update_configs:
   - package_manager: "javascript"
     directory: "/"
     update_schedule: "daily"
-  - automerged_updates:
+    automerged_updates:
       - match:
           dependency_type: "development"
           update_type: "all"
