replaced JSON.parse with secure-json-parse across files

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "p-map": "^4.0.0",
     "promise.allsettled": "^1.0.2",
     "readable-stream": "^3.5.0",
+    "secure-json-parse": "^2.1.0",
     "single-user-cache": "^0.3.0",
     "tiny-lru": "^7.0.2",
     "ws": "^7.2.1"
