--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@typescript-eslint/parser": "^3.6.1",
     "autocannon": "^6.0.0",
     "fastify": "^3.0.2",
+    "graphql-constraint-directive": "^2.1.0",
     "graphql-tools": "^6.0.14",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
