--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "bugs": {
     "url": "https://github.com/mercurius-js/mercurius/issues"
   },
-  "homepage": "https://github.com/mercurius-js/mercurius#readme",
+  "homepage": "https://mercurius.dev",
   "devDependencies": {
     "@sinonjs/fake-timers": "^6.0.1",
     "@types/node": "^14.0.23",
