--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   },
   "homepage": "https://mercurius.dev",
   "devDependencies": {
+    "@graphql-tools/merge": "^6.2.4",
+    "@graphql-tools/schema": "^6.2.4",
+    "@graphql-tools/utils": "^6.2.4",
     "@sinonjs/fake-timers": "^6.0.1",
     "@types/node": "^14.0.23",
     "@types/ws": "^7.2.6",
@@ -33,7 +36,6 @@
     "autocannon": "^6.0.0",
     "docsify-cli": "^4.4.1",
     "fastify": "^3.0.2",
-    "graphql-tools": "^6.0.14",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
     "snazzy": "^8.0.0",
