--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "split2": "^3.1.1",
     "standard": "^14.0.0",
     "tap": "^14.10.6",
-    "tsd": "^0.13.1"
+    "tsd": "^0.13.1",
+    "typescript": "^4.0.3"
   },
   "dependencies": {
     "end-of-stream": "^1.4.4",
