--- a/package.json
+++ b/package.json
@@ -48,12 +48,12 @@
   "dependencies": {
     "end-of-stream": "^1.4.4",
     "events.on": "^1.0.1",
+    "fastify-error": "^0.2.0",
     "fastify-plugin": "^2.0.1",
     "fastify-static": "^3.0.0",
     "fastify-websocket": "^2.0.5",
     "graphql": "^15.0.0",
     "graphql-jit": "^0.4.0",
-    "http-errors": "^1.7.3",
     "mqemitter": "^4.0.0",
     "p-map": "^4.0.0",
     "promise.allsettled": "^1.0.2",
