--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@graphql-tools/merge": "^6.2.4",
     "@graphql-tools/schema": "^6.2.4",
     "@graphql-tools/utils": "^6.2.4",
+    "@opentelemetry/api": "0.11.0",
     "@sinonjs/fake-timers": "^6.0.1",
     "@types/node": "^14.0.23",
     "@types/ws": "^7.2.6",
