add mac & windows ci workflows, replace eol with lf

--- a/.gitignore
+++ b/.gitignore
@@ -62,10 +62,14 @@ typings/
 
 # clinic
 *clinic*
-package-lock.json
 
 # vscode
 .vscode/
 
 # intellij idea, webstorm
 .idea/
+
+# lockfiles
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
