--- a/package.json
+++ b/package.json
@@ -25,38 +25,39 @@
   "homepage": "https://github.com/mercurius-js/mercurius#readme",
   "devDependencies": {
     "@sinonjs/fake-timers": "^6.0.1",
-    "@types/node": "^14.0.23",
-    "@types/ws": "^7.2.6",
+    "@types/node": "^14.14.20",
+    "@types/ws": "^7.4.0",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "autocannon": "^6.0.0",
-    "fastify": "^3.0.2",
-    "graphql-tools": "^6.0.14",
+    "fastify": "^3.9.2",
+    "graphql-tools": "^6.2.6",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
     "snazzy": "^8.0.0",
     "split2": "^3.1.1",
     "standard": "^14.0.0",
-    "tap": "^14.10.6",
+    "tap": "^14.11.0",
     "tsd": "^0.13.1"
   },
   "dependencies": {
+    "@types/isomorphic-form-data": "^2.0.0",
     "end-of-stream": "^1.4.4",
     "events.on": "^1.0.1",
     "fastify-plugin": "^2.0.1",
-    "fastify-static": "^3.0.0",
-    "fastify-websocket": "^2.0.5",
-    "graphql": "^15.0.0",
+    "fastify-static": "^3.4.0",
+    "fastify-websocket": "^2.0.11",
+    "graphql": "^15.4.0",
     "graphql-jit": "^0.4.0",
     "http-errors": "^1.7.3",
     "mqemitter": "^4.0.0",
     "p-map": "^4.0.0",
     "promise.allsettled": "^1.0.2",
     "readable-stream": "^3.5.0",
-    "secure-json-parse": "^2.1.0",
+    "secure-json-parse": "^2.2.0",
     "single-user-cache": "^0.3.0",
     "tiny-lru": "^7.0.2",
-    "ws": "^7.2.1"
+    "ws": "^7.4.2"
   },
   "tsd": {
     "directory": "test/types"
