--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "autocannon": "^6.0.0",
     "graphql-tools": "^6.2.6",
     "docsify-cli": "^4.4.1",
+    "fastify": "^3.0.2",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
     "snazzy": "^8.0.0",
