replaced JSON.parse with secure-json-parse across files (#311)
* replaced JSON.parse with secure-json-parse across files

* fix: sJSON->JSON in readme

* reverted JSON->sJSON in test files

* @types/isomorphic-form-data package

* Update routes.js

* Update package.json

* Update routes.js

* Update routes.js

Co-authored-by: Matteo Collina <hello@matteocollina.com>
Co-authored-by: Matteo Collina <matteo.collina@gmail.com>

--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "@graphql-tools/schema": "^6.2.4",
     "@graphql-tools/utils": "^6.2.4",
     "@sinonjs/fake-timers": "^6.0.1",
-    "@types/node": "^14.0.23",
-    "@types/ws": "^7.2.6",
+    "@types/node": "^14.14.20",
+    "@types/ws": "^7.4.0",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "autocannon": "^6.0.0",
+    "graphql-tools": "^6.2.6",
     "docsify-cli": "^4.4.1",
     "fastify": "^3.0.2",
     "pre-commit": "^1.2.2",
@@ -41,26 +42,28 @@
     "snazzy": "^8.0.0",
     "split2": "^3.1.1",
     "standard": "^14.0.0",
-    "tap": "^14.10.6",
+    "tap": "^14.11.0",
     "tsd": "^0.13.1",
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@types/isomorphic-form-data": "^2.0.0",
     "end-of-stream": "^1.4.4",
     "events.on": "^1.0.1",
     "fastify-error": "^0.2.0",
     "fastify-plugin": "^2.0.1",
-    "fastify-static": "^3.0.0",
-    "fastify-websocket": "^2.0.5",
+    "fastify-static": "^3.4.0",
+    "fastify-websocket": "^2.0.11",
     "graphql": "^15.4.0",
     "graphql-jit": "^0.4.0",
     "mqemitter": "^4.0.0",
     "p-map": "^4.0.0",
     "promise.allsettled": "^1.0.2",
     "readable-stream": "^3.5.0",
+    "secure-json-parse": "^2.2.0",
     "single-user-cache": "^0.3.0",
     "tiny-lru": "^7.0.2",
-    "ws": "^7.2.1"
+    "ws": "^7.4.2"
   },
   "tsd": {
     "directory": "test/types"
