refactor(gateway): switch to undici for service-to-service communication (#327)
* refactor(gateway): switch to undici for service-to-service communication

* fix: undici options

* fix(request): backward compatibility for keepAliveMsecs

* fix: revert previous commit (not the same option)

* Update lib/gateway/request.js

Co-authored-by: Matteo Collina <matteo.collina@gmail.com>

* chore: upgrade to undici v3, remove keepAlive parameter for undici Pool

Co-authored-by: Matteo Collina <matteo.collina@gmail.com>
Co-authored-by: Matteo Collina <hello@matteocollina.com>

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "secure-json-parse": "^2.2.0",
     "single-user-cache": "^0.3.0",
     "tiny-lru": "^7.0.2",
+    "undici": "^3.0.0",
     "ws": "^7.4.2"
   },
   "tsd": {
