--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "standard": "^16.0.0",
     "tap": "^15.0.0",
     "tsd": "^0.14.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "wait-on": "^5.3.0"
   },
   "dependencies": {
     "@types/isomorphic-form-data": "^2.0.0",
