--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "autocannon": "^7.0.5",
+    "concurrently": "^6.0.2",
     "docsify-cli": "^4.4.1",
     "fastify": "^3.0.2",
     "graphql-middleware": "^6.0.2",
@@ -46,7 +47,8 @@
     "standard": "^16.0.0",
     "tap": "^15.0.0",
     "tsd": "^0.14.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "wait-on": "^5.3.0"
   },
   "dependencies": {
     "@types/isomorphic-form-data": "^2.0.0",
