--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "graphql-tools": "^8.0.0",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
+    "sinon": "^12.0.1",
     "snazzy": "^9.0.0",
     "split2": "^4.0.0",
     "standard": "^16.0.3",
