--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "graphql-jit": "^0.7.3",
     "mqemitter": "^4.4.1",
     "p-map": "^4.0.0",
-    "promise.allsettled": "^1.0.4",
     "readable-stream": "^3.6.0",
     "safe-stable-stringify": "^2.3.0",
     "secure-json-parse": "^2.4.0",
@@ -74,5 +73,8 @@
   },
   "tsd": {
     "directory": "test/types"
+  },
+  "engines": {
+    "node": ">=12.9.0"
   }
 }
