chore: update fastify deps to @fastify

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "autocannon": "^7.3.0",
     "concurrently": "^7.0.0",
     "docsify-cli": "^4.4.3",
-    "fastify": "^3.18.1",
+    "fastify": "^3.28.0",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
     "sinon": "^13.0.0",
@@ -53,12 +53,12 @@
     "wait-on": "^6.0.0"
   },
   "dependencies": {
+    "@fastify/error": "^2.0.0",
+    "@fastify/static": "^5.0.0",
+    "@fastify/websocket": "^5.0.0",
     "@types/isomorphic-form-data": "^2.0.0",
     "events.on": "^1.0.1",
-    "fastify-error": "^1.0.0",
-    "fastify-plugin": "^3.0.0",
-    "fastify-static": "^4.2.2",
-    "fastify-websocket": "^4.0.0",
+    "fastify-plugin": "^3.0.1",
     "graphql": "^16.0.0",
     "graphql-jit": "^0.7.3",
     "mqemitter": "^4.4.1",
