--- a/package.json
+++ b/package.json
@@ -56,12 +56,12 @@
     "wait-on": "^6.0.0"
   },
   "dependencies": {
+    "@fastify/error": "^2.0.0",
+    "@fastify/static": "^5.0.0",
+    "@fastify/websocket": "^5.0.0",
     "@types/isomorphic-form-data": "^2.0.0",
     "events.on": "^1.0.1",
-    "fastify-error": "^0.3.1",
     "fastify-plugin": "^3.0.0",
-    "fastify-static": "^4.2.2",
-    "fastify-websocket": "^4.0.0",
     "graphql": "^15.5.1",
     "graphql-jit": "^0.7.0",
     "mqemitter": "^4.4.1",
