--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint:standard": "standard | snazzy",
     "lint:typescript": "standard --parser @typescript-eslint/parser --plugin @typescript-eslint/eslint-plugin test/types/*.ts",
     "typescript": "tsd",
-    "test": "npm run lint && npm run unit && npm run typescript"
+    "test": "npm run lint && npm run unit && npm run typescript",
+    "test2": "npm run unit"
   },
   "repository": {
     "type": "git",
