chore: send response correctly using websockets

--- a/package.json
+++ b/package.json
@@ -33,15 +33,16 @@
     "@graphql-tools/schema": "^9.0.2",
     "@graphql-tools/utils": "^8.0.0",
     "@sinonjs/fake-timers": "^9.1.2",
+    "@types/isomorphic-form-data": "^2.0.0",
     "@types/node": "^18.0.0",
     "@types/ws": "^8.2.0",
-    "@types/isomorphic-form-data": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "autocannon": "^7.3.0",
     "concurrently": "^7.0.0",
     "docsify-cli": "^4.4.3",
     "fastify": "^4.0.0",
+    "graphql-ws": "^5.11.2",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
     "sinon": "^14.0.0",
