--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://mercurius.dev",
   "peerDependencies": {
-    "graphql": "^16.0.0"
+    "graphql": "^17.0.0-alpha.2"
   },
   "devDependencies": {
     "@graphql-tools/merge": "^8.0.0",
@@ -61,7 +61,7 @@
     "@fastify/websocket": "^7.0.0",
     "events.on": "^1.0.1",
     "fastify-plugin": "^4.2.0",
-    "graphql": "^16.0.0",
+    "graphql": "^17.0.0-alpha.2",
     "graphql-jit": "^0.7.3",
     "mqemitter": "^5.0.0",
     "negotiator": "^0.6.3",
