--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "mercurius",
   "version": "11.3.0",
-  "description": "Fastify GraphQL adapter with gateway and subscription support",
+  "description": "Fastify GraphQL adapter with subscription support",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
     "docs": "docsify serve",
-    "unit": "tap test/*.js test/gateway/*.js test/internals/*.js",
-    "cov": "tap  --coverage-report=html -J test/*.js test/gateway/*.js",
+    "unit": "tap test/*.js test/internals/*.js",
+    "cov": "tap --jobs=1 --coverage-report=html test/*.js test/internals/*.js",
     "lint": "npm run lint:standard && npm run lint:typescript",
     "lint:fix": "standard --fix",
     "lint:standard": "standard | snazzy",
     "lint:typescript": "standard --parser @typescript-eslint/parser --plugin @typescript-eslint/eslint-plugin test/types/*.ts",
     "typescript": "tsd",
-    "test": "npm run lint && npm run unit && npm run typescript",
-    "test2": "npm run unit"
+    "test": "npm run lint && npm run unit && npm run typescript"
   },
   "repository": {
     "type": "git",
