--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "snazzy": "^9.0.0",
     "split2": "^4.0.0",
     "standard": "^17.0.0",
-    "tap": "^16.3.0",
+    "tap": "16.3.0",
     "tsd": "^0.24.1",
     "typescript": "^4.3.5",
     "wait-on": "^6.0.0"
