--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "unit": "tap test/*.js test/gateway/*.js test/internals/*.js",
     "cov": "tap  --coverage-report=html -J test/*.js test/gateway/*.js",
     "lint": "npm run lint:standard && npm run lint:typescript",
-    "lint:fix": "standard --fix",
+    "lint:fix": "standard --fix && npm run lint:typescript -- --fix",
     "lint:standard": "standard | snazzy",
     "lint:typescript": "standard --parser @typescript-eslint/parser --plugin @typescript-eslint/eslint-plugin test/types/*.ts",
     "typescript": "tsd",
-    "test": "npm run lint && npm run unit && npm run typescript",
-    "test2": "npm run unit"
+    "test": "npm run lint && npm run unit && npm run typescript"
   },
   "repository": {
     "type": "git",
