--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "snazzy": "^9.0.0",
     "split2": "^4.0.0",
     "standard": "^17.0.0",
-    "tap": "16.3.0",
+    "tap": "^16.3.0",
     "tsd": "^0.25.0",
     "typescript": "^4.3.5",
     "wait-on": "^7.0.1"
@@ -66,7 +66,7 @@
     "p-map": "^4.0.0",
     "readable-stream": "^4.0.0",
     "safe-stable-stringify": "^2.3.0",
-    "secure-json-parse": "^2.4.0",
+    "secure-json-parse": "^2.7.0",
     "single-user-cache": "^0.6.0",
     "tiny-lru": "^10.0.0",
     "undici": "^5.0.0",
