--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "docsify-cli": "^4.4.3",
     "fastify": "^4.0.0",
     "graphql-ws": "^5.11.2",
+    "mercurius-validation": "^4.0.0",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
     "sinon": "^15.0.0",
