--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
     "autocannon": "^7.3.0",
     "concurrently": "^8.0.1",
     "docsify-cli": "^4.4.3",
-    "fastify": "^4.16.0",
+    "fastify": "^4.17.0",
     "graphql-ws": "^5.11.2",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
+    "semver": "^7.5.0",
     "sinon": "^15.0.0",
     "snazzy": "^9.0.0",
     "split2": "^4.0.0",
