pin undici v5.28.1 because it supports Node.js v16
Signed-off-by: Matteo Collina <hello@matteocollina.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,3 +11,5 @@ updates:
     schedule:
       interval: "weekly"
     open-pull-requests-limit: 10
+    ignore:
+      - dependency-name: "undici"
