--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "secure-json-parse": "^2.7.0",
     "single-user-cache": "^0.6.0",
     "tiny-lru": "^11.0.0",
-    "undici": "5.28.4",
+    "undici": "^5.28.4",
     "ws": "^8.2.2"
   },
   "tsd": {
