--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^9.9.1",
     "fastify": "^4.17.0",
     "graphql": "^16.0.0",
+    "graphql-tag": "^2.12.6",
     "graphql-ws": "^5.11.2",
     "neostandard": "^0.11.4",
     "pre-commit": "^1.2.2",
@@ -61,6 +62,7 @@
     "graphql-jit": "0.8.4",
     "mqemitter": "^5.0.0",
     "p-map": "^4.0.0",
+    "quick-lru": "^7.0.0",
     "readable-stream": "^4.0.0",
     "safe-stable-stringify": "^2.3.0",
     "secure-json-parse": "^2.7.0",
