--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "docs": "docsify serve",
     "unit": "tap test/*.js test/internals/*.js",
     "cov": "tap  --coverage-report=html -J test/*.js test/internals/*.js",
-    "lint": "npm run lint:standard && npm run lint:typescript",
-    "lint:fix": "standard --fix",
-    "lint:standard": "standard | snazzy",
-    "lint:typescript": "standard --parser @typescript-eslint/parser --plugin @typescript-eslint/eslint-plugin test/types/*.ts",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "typescript": "tsd",
     "test": "npm run lint && npm run unit && npm run typescript",
     "test2": "npm run unit"
@@ -37,21 +35,19 @@
     "@types/isomorphic-form-data": "^2.0.0",
     "@types/node": "^20.1.4",
     "@types/ws": "^8.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
     "autocannon": "^7.3.0",
     "concurrently": "^8.0.1",
     "docsify-cli": "^4.4.3",
+    "eslint": "^9.9.1",
     "fastify": "^4.17.0",
     "graphql": "^16.0.0",
     "graphql-ws": "^5.11.2",
+    "neostandard": "^0.11.4",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
     "semver": "^7.5.0",
     "sinon": "^17.0.0",
-    "snazzy": "^9.0.0",
     "split2": "^4.0.0",
-    "standard": "^17.0.0",
     "tap": "^16.3.0",
     "tsd": "^0.30.0",
     "typescript": "^5.0.2",
