Preparing for Fastify v5 release
Fixes #1107

--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     "@graphql-tools/utils": "^10.0.0",
     "@sinonjs/fake-timers": "^11.0.0",
     "@types/isomorphic-form-data": "^2.0.0",
-    "@types/node": "^20.1.4",
+    "@types/node": "^22.0.0",
     "@types/ws": "^8.2.0",
     "autocannon": "^7.3.0",
     "concurrently": "^8.0.1",
     "docsify-cli": "^4.4.3",
     "eslint": "^9.9.1",
-    "fastify": "^4.17.0",
+    "fastify": "^5.0.0-alpha.4",
     "graphql": "^16.0.0",
     "graphql-ws": "^5.11.2",
     "neostandard": "^0.11.4",
@@ -54,10 +54,10 @@
     "wait-on": "^7.0.1"
   },
   "dependencies": {
-    "@fastify/error": "^3.0.0",
-    "@fastify/static": "^7.0.0",
-    "@fastify/websocket": "^10.0.0",
-    "fastify-plugin": "^4.2.0",
+    "@fastify/error": "^4.0.0",
+    "@fastify/static": "^8.0.0",
+    "@fastify/websocket": "^11.0.0",
+    "fastify-plugin": "^5.0.0",
     "graphql-jit": "0.8.4",
     "mqemitter": "^5.0.0",
     "p-map": "^4.0.0",
