test: migrated test/errors.test.js from tap to node:test

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@graphql-tools/merge": "^9.0.0",
     "@graphql-tools/schema": "^10.0.0",
     "@graphql-tools/utils": "^10.0.0",
+    "@matteo.collina/snap": "^0.3.0",
     "@sinonjs/fake-timers": "^14.0.0",
     "@types/isomorphic-form-data": "^2.0.0",
     "@types/node": "^22.0.0",
