--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "types": "index.d.ts",
   "scripts": {
     "docs": "docsify serve",
-    "unit": "tap test/*.js test/internals/*.js",
-    "cov": "tap  --coverage-report=html -J test/*.js test/internals/*.js",
+    "test:coverage": "c8 node --test && c8 report --reporter=html",
+    "unit": "c8 --100 node --test test/*.js test/internals/*.js",
+    "cov": "c8 node --test && c8 report --reporter=html",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "typescript": "tsd",
@@ -37,6 +38,7 @@
     "@types/node": "^24.0.3",
     "@types/ws": "^8.2.0",
     "autocannon": "^8.0.0",
+    "c8": "^10.1.3",
     "concurrently": "^9.0.0",
     "docsify-cli": "^4.4.3",
     "eslint": "^9.9.1",
@@ -50,7 +52,6 @@
     "semver": "^7.5.0",
     "sinon": "^21.0.0",
     "split2": "^4.0.0",
-    "tap": "^21.0.0",
     "tsd": "^0.32.0",
     "typescript": "~5.9.2",
     "undici": "^7.0.0",
