--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "scripts": {
     "docs": "docsify serve",
     "unit": "c8 -c test/config/c8-local.json node --env-file=test/config/env --test --test-timeout=300000 'test/**/*.test.js'",
-    "cov": "c8 -c test/config/c8-local.json node --env-file=test/config/env --test --test-timeout=300000 'test/**/*.test.js'",
+    "cov": "c8 -c test/config/c8-ci.json node --env-file=test/config/env --test --test-timeout=300000 'test/**/*.test.js'",
+    "unit:v20": "c8 -c test/config/c8-local.json node --env-file=test/config/env --test --test-timeout=300000 test/**/*.test.js test/**.test.js",
+    "cov:v20": "c8 -c test/config/c8-ci.json node --env-file=test/config/env --test --test-timeout=300000 test/**/*.test.js test/**.test.js",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "typescript": "tsd",
-    "test": "npm run lint && npm run test:unit && npm run typescript",
-    "test:unit": "npm run unit"
+    "test": "npm run lint && npm run unit && npm run typescript",
+    "test:v20": "npm run lint && npm run unit:v20 && npm run typescript"
   },
   "repository": {
     "type": "git",
