--- a/package.json
+++ b/package.json
@@ -6,15 +6,12 @@
   "types": "index.d.ts",
   "scripts": {
     "docs": "docsify serve",
-    "unit": "c8 -c test/config/c8-local.json node --env-file=test/config/env --test --test-timeout=300000 'test/**/*.test.js'",
-    "cov": "c8 -c test/config/c8-ci.json node --env-file=test/config/env --test --test-timeout=300000 'test/**/*.test.js'",
-    "unit:v20": "c8 -c test/config/c8-local.json node --env-file=test/config/env --test --test-timeout=300000 \"test/**/*.test.js\" \"test/**.test.js\"",
-    "cov:v20": "c8 -c test/config/c8-ci.json node --env-file=test/config/env --test --test-timeout=300000 \"test/**/*.test.js\" \"test/**.test.js\"",
+    "unit": "borp --no-typescript --timeout 300000 --reporter spec 'test/**/*.test.js'",
+    "cov": "borp --coverage --no-typescript --check-coverage --lines 100 --functions 100 --statements 100 --branches 100 --timeout 300000 --reporter spec 'test/**/*.test.js'",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "typescript": "tsd",
-    "test": "npm run lint && npm run unit && npm run typescript",
-    "test:v20": "npm run lint && npm run unit:v20 && npm run typescript"
+    "test": "npm run lint && npm run unit && npm run typescript"
   },
   "repository": {
     "type": "git",
@@ -39,8 +36,7 @@
     "@types/node": "^24.0.3",
     "@types/ws": "^8.2.0",
     "autocannon": "^8.0.0",
-    "c8": "^10.1.3",
-    "cleaner-spec-reporter": "^0.5.0",
+    "borp": "^0.20.2",
     "concurrently": "^9.0.0",
     "docsify-cli": "^4.4.3",
     "eslint": "^9.9.1",
