--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@fastify/error": "^4.0.0",
     "@fastify/static": "^8.0.0",
     "@fastify/websocket": "^11.0.0",
+    "borp": "^0.20.2",
     "fastify-plugin": "^5.0.0",
     "graphql-jit": "0.8.7",
     "mqemitter": "^7.0.0",
